# FastLog

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_tps.cpp
docs/: FastLog.xmind  architecture.md
examples/: 01_basic_usage.cpp  02_async_logger.cpp  03_custom_format.cpp  04_colored_console.cpp  05_rotating_file.cpp  06_multi_sink.cpp  07_flush_policy.cpp  08_backtrace.cpp  09_default_logger.cpp  CMakeLists.txt
include/: async_logger.h  backtracer.h  blocking_queue.h  circular_queue.h  default_logger.h  flush_policy.h  formatter.h  level.h  log_message.h  logger.h  logger_manager.h  macros.h  thread_pool.h
include/log/: file_sink.h  sink.h  stdout_sink.h
include/sink/: color_stdout_sink.h  dist_sink.h  rotating_file_sink.h  sink.h
src/: async_logger.cpp  backtracer.cpp  default_logger.cpp  file_sink.cpp  flush_policy.cpp  formatter.cpp  logger.cpp  logger_manager.cpp  stdout_sink.cpp  thread_pool.cpp
src/sink/: color_stdout_sink.cpp  dist_sink.cpp  file_sink.cpp  rotating_file_sink.cpp  stdout_sink.cpp
tests/: test_async_logger.cpp  test_backtracer.cpp  test_blocking_queue.cpp  test_circular_queue.cpp  test_color_stdout_sink.cpp  test_default_logger.cpp  test_dist_sink.cpp  test_flush_policy.cpp  test_formatter.cpp  test_logger.cpp  test_logger_manager.cpp  test_rotating_file_sink.cpp  test_sink.cpp  test_thread_pool.cpp
